--- a/client/src/assets/styles/index.css
+++ b/client/src/assets/styles/index.css
@@ -10,12 +10,14 @@ body {
 
 .error {
   color: red;
-  font-size: 10px;
+  font-size: 14px;
+  font-family: Arial, Helvetica, sans-serif;
   text-align: center;
 }
 .success {
   color: green;
-  font-size: 10px;
+  font-size: 14px;
+  font-family: Arial, Helvetica, sans-serif;
   text-align: center;
 }
 
